[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/base_menu_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/logo.png" type="Texture" id=2]
[ext_resource path="res://art/play.png" type="Texture" id=3]
[ext_resource path="res://art/config.png" type="Texture" id=4]
[ext_resource path="res://scripts/main.gd" type="Script" id=5]

[node name="Main" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="Graphics" parent="MarginContainer/GraphicsAndButtons" index="0"]
margin_bottom = 488.0
rect_min_size = Vector2( 488, 488 )
texture = ExtResource( 2 )
expand = true

[node name="Buttons" parent="MarginContainer/GraphicsAndButtons" index="1"]
margin_top = 518.0
margin_bottom = 846.0

[node name="button1" parent="MarginContainer/GraphicsAndButtons/Buttons" index="0"]
margin_bottom = 80.0
rect_min_size = Vector2( 512, 80 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="button 1,5" type="TextureButton" parent="MarginContainer/GraphicsAndButtons/Buttons" index="1"]
margin_top = 100.0
margin_right = 536.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 80 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="MarginContainer/GraphicsAndButtons/Buttons/button 1,5" index="0"]
margin_left = 222.236
margin_top = 49.5511
margin_right = 758.236
margin_bottom = 63.5511
text = "Time attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button2" parent="MarginContainer/GraphicsAndButtons/Buttons" index="2"]
margin_top = 200.0
margin_bottom = 328.0
rect_min_size = Vector2( 512, 128 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3
[connection signal="pressed" from="MarginContainer/GraphicsAndButtons/Buttons/button1" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="MarginContainer/GraphicsAndButtons/Buttons/button 1,5" to="." method="_on_button_15_pressed"]
[connection signal="pressed" from="MarginContainer/GraphicsAndButtons/Buttons/button2" to="." method="_on_button2_pressed"]
